# sapiens-copilot

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
docs/decisions/: 0001-sqlite-checkpointer-lifecycle.md  0002-middleware-reuse-over-rebuild.md  README.md
src/sapiens/: __init__.py  agent.py  cli.py  config.py  models.py
src/sapiens/middleware/: __init__.py  patch.py  stack.py
src/sapiens/tools/: __init__.py  registry.py
tests/: test_agent.py  test_config.py  test_middleware.py  test_smoke.py
