[project]
name = "sapiens-copilot"
version = "0.1.0"
description = "Sapiens — embedded BI copilot for your enterprise apps."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Son Dang Dinh", email = "samson.ailabs@gmail.com" }
]
dependencies = [
    "langchain>=1.3,<2",
    "langchain-openrouter>=0.2.3",
    "langgraph>=1.2,<2",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
sapiens = "sapiens.cli:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "sapiens"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D", "TID", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests are self-documenting via descriptive names; don't require docstrings.
"tests/**" = ["D"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]
